
Please note that web and source document links, product and service names
listed in historic entries of past releases may no longer be relevant.

For a complete and more detailed list of changes, please refer to the
ChangeLog file (generated for release archives), or to the Git version
control history for "live" codebase.


PLANNED: Release notes for NUT 2.8.5 - what's new since 2.8.4
-------------------------------------------------------------

https://github.com/networkupstools/nut/milestone/12

 - (expected) Dynamic Mapping Files (DMF) feature supported, to allow
   the driver binaries to be built once and data mappings to be loaded
   and modernized on the fly (porting from 42ITy project)

 - (expected) Porting of reference packaging from 42ITy project

 - (expected) Porting of patches suggested by different distribution packages

 - (expected) C code clean-up/consistency (string format security, work with
   Boolean values, string to number conversions, etc. in the same manner)

 - (expected) clean-up of libusb API variants support [#300 and follow-ups]

 - (expected) CI automation for coding style

 - (expected) CI automation for driver flags and variables to be certainly
   documented, handled in augeas lenses, nutconf classes, etc.

 - (expected) CI automation for use of data points in drivers that conform
   to patterns defined in link:docs/nut-names.txt[]

 - common code:
   * Introduced `setproctag()` and `getproctag()` (see examples in `upsmon`)
     to help track the log messages from massively-forking NUT daemons. [#3084]
   * Extended with plural `checkprocnames()` and `compareprocnames()`,
     as well as `sendsignalpidaliases()` and `sendsignalfnaliases()`, for
     binaries that expect to have one of several names at the moment (e.g.
     when renaming a program to "*-old" or promoting a "*-new" into the
     stable name as a default implementation). Drivers united by `main.c`